...
                    showSnackbar("Login successful", SnackbarType.SUCCESS)
                    delay(1000) // Brief delay to show success message
                    navigateToMainActivity()
                } else {
                    Log.e("API_ERROR", "Login failed: ${response.code()}")
                    // Show error message with softer styling
                    showSnackbar("Username or Password is incorrect", SnackbarType.ERROR)
                }
            } catch (e: Exception) {
                isLoading.value = false
                Log.e("API_EXCEPTION", "Error during login", e)
                showSnackbar("Error: ${e.message ?: "Unknown error"}", SnackbarType.ERROR)
            }
...
                        // Email Field
                        OutlinedTextField(
                            value = email,
                            onValueChange = { email = it },
                            label = { Text(stringResource(id = R.string.email)) },
                            singleLine = true,
                            modifier = Modifier.fillMaxWidth().testTag("emailField"),
                            shape = RoundedCornerShape(16.dp),
                            colors = OutlinedTextFieldDefaults.colors(
                                focusedBorderColor = Color(0xFF000000),
                                unfocusedBorderColor = Color(0xFF909090),
                                focusedTextColor = Color.Black,
                                unfocusedTextColor = Color.Black,
...
                        // Password Field
                        OutlinedTextField(
                            value = password,
                            onValueChange = { password = it },
                            label = { Text(stringResource(id = R.string.password)) },
                            singleLine = true,
                            modifier = Modifier.fillMaxWidth().testTag("passwordField"),
                            visualTransformation = if (passwordVisible) VisualTransformation.None else PasswordVisualTransformation(),
                            shape = RoundedCornerShape(16.dp),
                            colors = OutlinedTextFieldDefaults.colors(
                                focusedBorderColor = Color(0xFF000000),
                                unfocusedBorderColor = Color(0xFF909090),
                                focusedTextColor = Color.Black,
...
