...

    <string name="intro_title_3">Productivity-Focused</string>
    <string name="intro_description_3">No more lost or forgotten borrowed items! ToolTrack keeps\neverything organized so you can focused\non what matters.</string>

    <!-- Login and Signup -->
    <string name="login">Login</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_with_google">Login with Google</string>
    <string name="dont_have_account">Don\'t have an account? </string>
...
